--- a/style/main.css
+++ b/style/main.css
@@ -1,99 +1,61 @@
 body {
-	background: rgba(0,0,0,0.2);
+	padding: 20px;
 }
 
-h1, p {
-	text-align: center;
+#new-game {
+	font-family: "Lucida Console", Courier, monospace;
+	font-style: normal;
+	font-size: 1.5em;
+	float: right;
+	display: block;
 }
 
-p{
-	font-size: 1.3em;
+section {
+	margin: 5%;
+	display: block;
+}
+
+#intro h2 {
+	font-family: fantasy;
 	font-weight: bold;
+	font-size: 3em;
 }
 
-h1 span {
-	color: red;
+#user-guess {
+	font-size: 7em;
+	width: 2em;
+	text-align: right;
+	font-family: sans-serif;
+	border-radius: 0.1em;
 }
 
-#cold{
-	color: blue;
+#progress-bar {
+	margin-top: 2em;
+	height: 2.5em; 
 }
 
-
-#display {
-	background-color: navy;
-	min-width: 25em;
-	height: 3em;
-	display: block;
-	margin: 2em auto;
-	padding: 0.25em;
-	font-size: 16px;
-	color: white;
-	border-radius: 10px;
-	border: none;
-	text-align: center;
+#modal-text {
+	padding: 0.5em 1em;
+	font-family: fantasy;
+	font-weight: bold;
+	font-size: 2em;
 }
 
-#input-box{
-	border: 1px solid rgba(0,0,0,0.2);
-	height: 10em;
-	width: 20em;
-	margin: 0 auto;
-	background: -webkit-linear-gradient(navy, skyblue);
-	border-radius: 1.5em;
-}
+@media only screen and (max-width: 420px) {
+	#intro {
+		margin-top: 15%;
+	}
 
-h2 {
-	color: white;
-	text-align: center;
+	#intro h2 {
+		font-size: 1.4em;
+	}
+	#ingress {
+		margin-top: 15%;
+		float: center;
+		display: block;
+	}
+	#progress-bar {
+		margin-top: 15%;
+		height: 2.5em; 
+	}
 }
-
-#user-guess{
-	text-align: center;
-	height: 2em;
-	margin-left: 5em;
-}
-
-#button-group{
-	margin: 2em auto;
-	width: 20em;
-	height: 3em;
-	text-align: center;
-}
-
-button {
-	margin: 0.5em;
-	font-size: 1em;
-	background: green;
-	border: none;
-	padding: 0.5em;
-	border-radius: 5px;
-	color: white;
-	cursor: pointer;
-	opacity: 0.8;
-}
-button:hover{
-	opacity: 1;
-}
-
-
-.end-mode{
-	display: none;
-}
-
-#thermometer{
-	margin: 1em auto;
-	border: 1px solid navy;
-	width: 240px;
-	height: 2em;
-	display: block;
-	border-radius: 10px;
-}
-
-#mercury{
-	background: -webkit-linear-gradient(left,orange,tomato, red);
-	width: 0px;
-	height: 2em;
-	border-radius: 10px;
-}
-
